--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buddy</title>
 
-    <link rel="stylesheet" href="../build/tailwind.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
     <style>
       /* Ensure dropdowns are hidden by default */
       .dropdown-menu {
@@ -162,7 +162,7 @@
     <div class="relative h-screen text-center text-white">
       <div
         class="bg-transparent h-[60rem] bg-center bg-no-repeat bg-contain"
-        style="background-image: url('./assets/order_back.png')"
+        style="background-image: url('./assets/main_back.png')"
       >
         <div class="mx-auto flex flex-col items-center py-12 sm:py-24">
           <div
@@ -242,7 +242,7 @@
             class="space-y-8 lg:grid lg:grid-cols-3 sm:gap-6 xl:gap-10 lg:space-y-0"
           >
             <div
-              class="flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
+              class="btn flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
             >
               <h3
                 class="mb-2 sm:text-3xl text-2xl md:text-5xl font-semibold text-gradient"
@@ -255,25 +255,28 @@
                   >From $5.99 /month</span
                 >
               </div>
-              <hr class="my-12" />
+              <hr class="my-8" />
               <ul role="list" class="mb-8 space-y-4 text-center flex-1">
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
                   <span>Individual configuration</span>
                 </li>
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
                   <span>No setup, or hidden fees</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Premium support:
-                    <span class="font-semibold">6 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>Individual configuration</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Free updates:
-                    <span class="font-semibold">6 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>No setup, or hidden fees</span>
+                </li>
+                <li class="text-secondary">
+                  <span>No setup, or hidden fees</span>
+                </li>
+                <li class="text-secondary">
+                  <span>Premium support: <span class="">6 months</span></span>
+                </li>
+                <li class="text-secondary">
+                  <span>Free updates: <span class="">6 months</span></span>
                 </li>
               </ul>
               <a
@@ -284,10 +287,10 @@
             </div>
 
             <div
-              class="flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
+              class="btn flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
             >
               <h3
-                class="mb-2 sm:text-3xl text-2xl md:text-5xl font-semibold gradient-text"
+                class="mb-2 sm:text-3xl text-2xl md:text-5xl font-semibold text-gradient"
               >
                 Hosting
               </h3>
@@ -297,31 +300,28 @@
                   >From $5.99 /month</span
                 >
               </div>
-              <hr class="my-12" />
+              <hr class="my-8" />
               <ul role="list" class="mb-8 space-y-4 text-center flex-1">
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
                   <span>Individual configuration</span>
                 </li>
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
+                  <span>Individual configuration</span>
+                </li>
+                <li class="text-secondary">
                   <span>No setup, or hidden fees</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Team size:
-                    <span class="font-semibold">10 developers</span></span
-                  >
+                <li class="text-secondary">
+                  <span>No setup, or hidden fees</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Premium support:
-                    <span class="font-semibold">24 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>Team size: <span class="">10 developers</span></span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Free updates:
-                    <span class="font-semibold">24 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>Premium support: <span class="">24 months</span></span>
+                </li>
+                <li class="text-secondary">
+                  <span>Free updates: <span class="">24 months</span></span>
                 </li>
               </ul>
               <a
@@ -332,10 +332,10 @@
             </div>
 
             <div
-              class="flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
+              class="btn flex flex-col max-w-sm p-6 text-center text-secondary border border-sectext-secondary rounded-md rounded-br-lg shadow dark:border-sectext-secondary xl:p-8 dark:bg-sectext-secondary dark:text-white"
             >
               <h3
-                class="mb-2 sm:text-3xl text-2xl md:text-5xl font-semibold gradient-text"
+                class="mb-2 sm:text-3xl text-2xl md:text-5xl font-semibold text-gradient"
               >
                 Servers
               </h3>
@@ -345,32 +345,29 @@
                   >From $5.99 per task</span
                 >
               </div>
-              <hr class="my-12" />
+              <hr class="my-8" />
 
               <ul role="list" class="mb-8 space-y-4 text-center flex-1">
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
                   <span>Individual configuration</span>
                 </li>
-                <li class="space-x-3 text-secondary">
+                <li class="text-secondary">
                   <span>No setup, or hidden fees</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Team size:
-                    <span class="font-semibold">100+ developers</span></span
-                  >
+                <li class="text-secondary">
+                  <span>Individual configuration</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Premium support:
-                    <span class="font-semibold">36 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>No setup, or hidden fees</span>
                 </li>
-                <li class="space-x-3 text-secondary">
-                  <span
-                    >Free updates:
-                    <span class="font-semibold">36 months</span></span
-                  >
+                <li class="text-secondary">
+                  <span>Team size: <span class="">100+ developers</span></span>
+                </li>
+                <li class="text-secondary">
+                  <span>Premium support: <span class="">36 months</span></span>
+                </li>
+                <li class="text-secondary">
+                  <span>Free updates: <span class="">36 months</span></span>
                 </li>
               </ul>
               <a
@@ -422,11 +419,11 @@
         </div>
 
         <!-- Lower Row -->
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2">
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-2 mx-auto">
           <!-- Component 4 -->
           <div class="flex flex-col items-center p-4 rounded-lg">
             <img
-              src="security.svg"
+              src="./assets/security.svg"
               alt="Highly Secure"
               class="w-20 h-20 object-contain mb-4"
             />
@@ -435,20 +432,22 @@
           <!-- Component 5 -->
           <div class="flex flex-col items-center p-4 rounded-lg">
             <img
-              src="server.svg"
+              src="./assets/server.svg"
               alt="Fast Servers"
               class="w-20 h-20 object-contain mb-4"
             />
             <h3 class="text-xl font-semibold text-secondary">Fast Servers</h3>
           </div>
         </div>
+        </div>
       </div>
     </section>
     <!-- ==========  IMAGE CONTENT ========== -->
-
+    
+  
     <section class="py-12">
       <div
-        class="container mx-auto px-4 bg-background rounded-md rounded-br-lg shadow-lg bg-gradient-to-r from-[#f2fffd] to-[#f9fdff]"
+        class="container mx-auto px-4 bg-background rounded-md rounded-br-lg shadow-lg bg-gradient-to-r from-[#f2fffd] to-[#f9fdff] p-4"
       >
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <!-- Left Side (Image) -->
@@ -464,19 +463,21 @@
             <p class="text-lg text-secondary mb-6">
               Take Our Needs Assessment and Let’s Connect.
             </p>
-            <div class="flex w-2/5 justify-start flex-col items-start gap-5">
-              <a
-                href="#"
-                class="block w-full text-center py-3 text-lg font-semibold text-white bg-primary rounded-md rounded-br-lg shadow hover:bg-white hover:text-primary hover:border hover:border-primary focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary"
-                >Take Our Needs Assessment</a
-              >
+            <div
+            class="flex justify-start flex-col items-start gap-5 md:w-3/4 px-auto"
+          >
+            <a
+              href="#"
+              class="block w-full text-center py-3 text-lg font-semibold text-white bg-primary rounded-md rounded-br-lg shadow hover:bg-white hover:text-primary border border-primary focus:outline-none focus:ring-primary"
+              >Take Our Needs Assessment</a
+            >
 
-              <a
-                href="#"
-                class="block text-center text-gradient w-full py-3 text-lg font-semibold text-primary border border-primary rounded-md rounded-br-lg shadow hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
-                >Let’s Connect</a
-              >
-            </div>
+            <a
+              href="#"
+              class="block w-full text-center text-gradient py-3 text-lg font-semibold text-primary border border-primary rounded-md rounded-br-lg shadow hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+              >Let’s Connect</a
+            >
+          </div>
           </div>
         </div>
       </div>
@@ -504,7 +505,7 @@
             <div
               class="bg-blue-500 text-white p-4 h-28 w-full bg-sectext-secondary rounded-md"
               style="
-                background-image: url(https://source.unsplash.com/random);
+                background-image: url('https://source.unsplash.com/random');
                 background-repeat: no-repeat;
                 background-size: cover;
               "
@@ -513,9 +514,9 @@
             <div class="flex gap-4">
               <!-- Sidebar -->
               <div
-                class="w-40 bg20ray-000 text-white p-8 rounded-md"
+                class="md:w-40 w-24 bg-gray-000 text-white p-8 rounded-md"
                 style="
-                  background-image: url(https://source.unsplash.com/random);
+                  background-image: url('https://source.unsplash.com/random');
                   background-repeat: no-repeat;
                   background-size: cover;
                 "
@@ -526,18 +527,14 @@
                 <div
                   class="bg-white rounded-md shadow-md h-32"
                   style="
-                    background-image: url(https://source.unsplash.com/random);
+                    background-image: url('https://source.unsplash.com/random');
                     background-repeat: no-repeat;
                     background-size: cover;
                   "
                 ></div>
                 <div
                   class="bg-white rounded-md shadow-md h-32"
-                  style="
-                    background-image: url(https://source.unsplash.com/random);
-                    background-repeat: no-repeat;
-                    background-size: cover;
-                  "
+                  style="background-image: url('https://source.unsplash.com/random');background-repeat: no-repeat;background-size: cover;"
                 ></div>
               </div>
             </div>
