--- a/src/cart.html
+++ b/src/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cart</title>
-    <link rel="stylesheet" href="../build/tailwind.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
     <style>
       .toggle-checkbox:checked + .toggle-label {
         background-color: #68d391; /* Tailwind green-400 */
@@ -156,10 +156,61 @@
       </div>
     </nav>
     <!-- Top Header -->
-    <div class="container mx-auto px-4 my-5 flex items-center gap-2">
+    <div class="container mx-auto px-4 my-5 md:flex hidden items-center gap-2">
       <img src="./assets/cart.svg" alt="Cart" class="object-contain" />
       <h1 class="text-4xl font-semibold text-secondary">Cart</h1>
     </div>
+    <div
+      class="container mx-auto p-6 mb-5 block md:hidden items-center gap-2 bg-primary text-white rounded-br-lg"
+    >
+      <div class="flex items-start justify-between gap-2">
+        <div>
+          <div class="flex items-center gap-2">
+            <img
+              src="./assets/cart_white.svg"
+              alt="Cart"
+              class="object-contain"
+            />
+            <h1 class="text-3xl font-semibold">Cart</h1>
+          </div>
+          <p class="text-lg mt-1">3 Items</p>
+        </div>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="white"
+          class="size-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M6 18 18 6M6 6l12 12"
+          />
+        </svg>
+      </div>
+
+      <div
+        class="my-4 flex justify-end flex-col items-end text-lg font-semibold"
+      >
+        <span class="text-lg">Subtotal</span>
+        <span class="text-4xl">SG$149.18</span>
+      </div>
+      <div class="flex w-full justify-start items-center gap-2 my-2">
+        <button
+          class="text-center w-full py-3 text-lg font-semibold text-white border border-white rounded-md rounded-br-lg shadow hover:bg-primary hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500"
+        >
+          Continue Shopping
+        </button>
+        <button
+          class="w-full text-center py-3 text-lg font-semibold text-primary bg-white rounded-md border border-primary rounded-br-lg shadow hover:bg-white hover:text-primary focus:outline-none focus:ring focus:ring-offset-2 focus:ring-primary"
+        >
+          Pay
+        </button>
+      </div>
+    </div>
+
     <!-- Cart Section -->
     <section class="container mx-auto px-4 pb-8">
       <div class="grid grid-cols-1 lg:grid-cols-12 gap-8">
@@ -178,11 +229,11 @@
               Extra information and description here if needed
             </p>
             <div class="flex items-center mb-2">
-              <label for="year" class="mr-2">Year:</label>
+              <label for="year" class="mr-2 text-secondary">Year:</label>
               <select
                 name="year"
                 id="year"
-                class="border border-secondary rounded-md rounded-br-lg py-1 px-2 focus:outline-none focus:border-primary"
+                class="border border-secondary rounded-md rounded-br-lg py-2 px-2 focus:outline-none focus:border-primary"
               >
                 <option value="1">1 Year</option>
                 <option value="2">2 Years</option>
@@ -252,11 +303,11 @@
               Extra information and description here if needed
             </p>
             <div class="flex items-center mb-2">
-              <label for="year" class="mr-2">Year:</label>
+              <label for="year" class="mr-2 text-secondary">Year:</label>
               <select
                 name="year"
                 id="year"
-                class="border border-secondary rounded-md rounded-br-lg py-1 px-2 focus:outline-none focus:border-primary"
+                class="border border-secondary rounded-md rounded-br-lg py-2 px-2 focus:outline-none focus:border-primary"
               >
                 <option value="1">1 Year</option>
                 <option value="2">2 Years</option>
@@ -326,11 +377,11 @@
               Extra information and description here if needed
             </p>
             <div class="flex items-center mb-2">
-              <label for="year" class="mr-2">Year:</label>
+              <label for="year" class="mr-2 text-secondary">Year:</label>
               <select
                 name="year"
                 id="year"
-                class="border border-secondary rounded-md rounded-br-lg py-1 px-2 focus:outline-none focus:border-primary"
+                class="border border-secondary rounded-md rounded-br-lg py-2 px-2 focus:outline-none focus:border-primary"
               >
                 <option value="1">1 Year</option>
                 <option value="2">2 Years</option>
@@ -391,38 +442,43 @@
         </div>
 
         <!-- Order Summary -->
-        <div class="lg:col-span-4">
+        <div class="lg:col-span-4 md:block hidden">
           <div class="shadow-md rounded-br-lg rounded-md p-4">
-            <div class="flex justify-between items-center">
-              <h2 class="text-xl font-semibold text-secondary mb-4">Order</h2>
-              <p class="text-secondary mb-2">3 Items</p>
+            <div class="flex justify-between items-end">
+              <div>
+                <h3 class="md:text-5xl text-3xl font-semibold text-secondary">
+                  Order
+                </h3>
+              </div>
+              <p class="text-lg text-secondary mt-1">3 Items</p>
             </div>
-            <div class="border-t border-secondary pt-2 my-5">
+            <hr class="my-8" />
+            <div class="pt-2 my-5">
               <div class="flex justify-between mb-2">
-                <span>Subtotal</span>
-                <span>SG$146</span>
+                <span class="text-secondary text-lg">Subtotal</span>
+                <span class="text-secondary text-lg">SG$146</span>
               </div>
               <div class="flex justify-between mb-2">
-                <span>GST</span>
-                <span>SG$3.18</span>
+                <span class="text-secondary text-lg">GST</span>
+                <span class="text-secondary text-lg">SG$3.18</span>
               </div>
 
               <div class="flex justify-between mb-2">
-                <span>Discount</span>
-                <span class="text-red-500">– SG$0</span>
+                <span class="text-secondary text-lg">Discount</span>
+                <span class="text-secondary">– SG$0</span>
               </div>
             </div>
-            <div class="border-t border-secondary pt-4 mt-4">
-              <div
-                class="flex justify-between text-lg font-semibold text-secondary"
-              >
-                <span>Total</span>
-                <span>SG$149.18</span>
-              </div>
+            <div
+              class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            >
+              <span class="text-xl">Total</span>
+              <span class="md:text-3xl text-xl text-secondary">SG$149.18</span>
             </div>
-            <div class="flex w-full justify-start flex-col items-start gap-5">
+            <div
+              class="flex w-full justify-start flex-col items-start gap-5 my-2"
+            >
               <button
-                class="block w-full text-center py-3 text-lg font-semibold text-secondary text-white bg-primary rounded-md rounded-br-lg shadow hover:bg-white hover:text-primary hover:border hover:border-primary focus:outline-none focus:ring focus:ring-offset-2 focus:ring-primary"
+                class="block w-full text-center py-3 text-lg font-semibold text-secondary text-white bg-primary rounded-md border border-primary rounded-br-lg shadow hover:bg-white hover:text-primary focus:outline-none focus:ring focus:ring-offset-2 focus:ring-primary"
               >
                 Pay
               </button>
