--- a/src/checkout.html
+++ b/src/checkout.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout Page</title>
-    <link rel="stylesheet" href="../build/tailwind.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
   </head>
-  <body class="p-6">
+  <body>
     <!-- ========== Header CONTENT ========== -->
     <nav class="bg-[transparent] dark:bg-black dark:text-secondary">
       <div
@@ -146,15 +146,19 @@
         </div>
       </div>
     </nav>
-    <div class="w-md mx-auto bg-white p-6">
-      <h2 class="text-3xl font-bold mb-6">Checkout</h2>
+    <div class="container mx-auto bg-white p-6">
+      <h2 class="text-3xl md:text-5xl text-secondary font-bold mb-6">
+        Checkout
+      </h2>
       <div class="grid md:grid-cols-2 grid-cols-1 gap-4 mb-6">
         <!-- Sign In Section -->
-        <div class="">
-          <h3 class="text-xl font-semibold mb-4">Sign in</h3>
-          <p class="mb-4">
+        <div class="md:w-3/4">
+          <h3 class="text-xl md:text-2xl font-semibold mb-4 text-secondary">
+            Sign in
+          </h3>
+          <p class="mb-4 text-secondary">
             Not a HI Buddy yet?
-            <a href="#" class="text-blue-500">Register now.</a>
+            <a href="#" class="text-semibold">Register now.</a>
           </p>
           <form>
             <div class="mb-4">
@@ -182,7 +186,7 @@
                   type="email"
                   id="email"
                   name="email"
-                  class="w-full pl-10 pr-4 py-2 border border-secondary rounded-md rounded-br-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+                  class="w-full pl-10 pr-4 py-4 border border-secondary rounded-md rounded-br-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
                   placeholder="Email"
                 />
               </div>
@@ -212,7 +216,7 @@
                   type="password"
                   id="password"
                   name="password"
-                  class="w-full pl-10 pr-4 py-2 border border-secondary rounded-br-lg rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
+                  class="w-full pl-10 pr-4 py-4 border border-secondary rounded-br-lg rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500"
                   placeholder="Password"
                 />
               </div>
@@ -226,40 +230,44 @@
           </form>
         </div>
         <!-- Order Summary Section -->
-        <div
-          class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl"
-          style="
-            background: linear-gradient(
-              140.9deg,
-              #f2fffd 27.61%,
-              #f9fdff 72.42%
-            );
-          "
-        >
-          <div class="flex justify-between items-end">
-            <div>
-              <h3 class="text-5xl font-semibold text-secondary">Order</h3>
-            </div>
-            <p class="text-lg text-secondary mt-1">3 Items</p>
-          </div>
-          <hr class="my-8" />
-          <div class="mt-2 flex justify-between text-sm text-secondary">
-            <span class="text-lg">Subtotal</span>
-            <span class="text-lg">SG$146</span>
-          </div>
-          <div class="flex justify-between text-sm text-secondary">
-            <span class="text-lg">GST</span>
-            <span class="text-lg">SG$3.18</span>
-          </div>
-          <div class="flex justify-between text-sm text-secondary">
-            <span class="text-lg">Discount</span>
-            <span class="text-lg">- SG$0</span>
-          </div>
+        <div class="">
           <div
-            class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl"
+            style="
+              background: linear-gradient(
+                140.9deg,
+                #f2fffd 27.61%,
+                #f9fdff 72.42%
+              );
+            "
           >
-            <span class="text-xl">Total</span>
-            <span class="text-3xl">SG$149.18</span>
+            <div class="flex justify-between items-end">
+              <div>
+                <h3 class="md:text-5xl text-3xl font-semibold text-secondary">
+                  Order
+                </h3>
+              </div>
+              <p class="text-lg text-secondary mt-1">3 Items</p>
+            </div>
+            <hr class="my-8" />
+            <div class="mt-2 flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">Subtotal</span>
+              <span class="text-lg text-secondary">SG$146</span>
+            </div>
+            <div class="flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">GST</span>
+              <span class="text-lg text-secondary">SG$3.18</span>
+            </div>
+            <div class="flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">Discount</span>
+              <span class="text-lg text-secondary">- SG$0</span>
+            </div>
+            <div
+              class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            >
+              <span class="md:text-xl text-lg text-secondary">Total</span>
+              <span class="md:text-3xl text-xl text-secondary">SG$149.18</span>
+            </div>
           </div>
         </div>
       </div>
