--- a/src/order.html
+++ b/src/order.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Payment Successful</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="./tailwind.css" />
   </head>
   <body>
     <!-- ========== Header CONTENT ========== -->
@@ -149,13 +146,10 @@
         </div>
       </div>
     </nav>
+    <!-- Order Success Section -->
     <div
-      class="flex flex-col items-center justify-center min-h-screen py-2 w-full"
-      style="
-        background-image: url('./assets/order_back.png');
-        background-repeat: no-repeat;
-        background-position: center;
-      "
+      class="bg-transparent h-[60rem] bg-center bg-no-repeat bg-contain flex flex-col items-center justify-center py-2 w-full"
+      style="background-image: url('./assets/order_back.png'); height: 50rem"
     >
       <!-- Success Message -->
       <div class="p-6 text-center w-full max-w-lg">
@@ -175,7 +169,7 @@
             />
           </svg>
 
-          <h2 class="mt-2 text-2xl font-semibold text-gray-700">
+          <h2 class="mt-2 text-2xl font-semibold text-secondary">
             Payment Successful
           </h2>
         </div>
@@ -193,34 +187,104 @@
         >
           <div class="flex justify-between items-end">
             <div>
-              <h3 class="text-5xl font-semibold text-gray-800">Order</h3>
+              <h3 class="md:text-5xl text-3xl font-semibold text-secondary">
+                Order
+              </h3>
             </div>
-            <p class="text-lg text-gray-600 mt-1">3 Items</p>
+            <p class="text-lg text-secondary mt-1">3 Items</p>
           </div>
           <hr class="my-8" />
-          <div class="mt-2 flex justify-between text-sm text-gray-600">
-            <span class="text-lg">Subtotal</span>
-            <span class="text-lg">SG$146</span>
+          <div class="mt-2 flex justify-between text-sm text-secondary">
+            <span class="text-lg text-secondary">Subtotal</span>
+            <span class="text-lg text-secondary">SG$146</span>
           </div>
-          <div class="flex justify-between text-sm text-gray-600">
-            <span class="text-lg">GST</span>
-            <span class="text-lg">SG$3.18</span>
+          <div class="flex justify-between text-sm text-secondary">
+            <span class="text-lg text-secondary">GST</span>
+            <span class="text-lg text-secondary">SG$3.18</span>
           </div>
-          <div class="flex justify-between text-sm text-gray-600">
-            <span class="text-lg">Discount</span>
-            <span class="text-lg">- SG$0</span>
+          <div class="flex justify-between text-sm text-secondary">
+            <span class="text-lg text-secondary">Discount</span>
+            <span class="text-lg text-secondary">- SG$0</span>
           </div>
           <div
-            class="mt-4 flex justify-between text-lg font-semibold text-gray-800"
+            class="mt-4 flex justify-between text-lg font-semibold text-secondary"
           >
             <span class="text-xl">Total</span>
-            <span class="text-3xl">SG$149.18</span>
+            <span class="md:text-3xl text-xl">SG$149.18</span>
           </div>
         </div>
       </div>
     </div>
+
+    <!-- Order Fail Section -->
+    <main>
+      <div
+        class="flex flex-col items-center justify-center py-2 w-full bg-no-repeat bg-center bg-contain h-[60rem]"
+        style="
+          background-image: url('./assets/order_back_fail.png');
+          height: 50rem;
+        "
+      >
+        <!-- Error Message -->
+        <div class="p-6 text-center w-full max-w-lg">
+          <div class="mb-4 flex justify-center flex-col items-center gap-4">
+            <img src="./assets/fail.svg" />
+
+            <h2 class="mt-2 text-2xl font-semibold text-secondary">
+              Payment Failed
+            </h2>
+            <button
+              class="block w-2/3 text-center py-3 text-lg font-semibold text-secondary text-white bg-secondary rounded-md rounded-br-lg shadow"
+            >
+              Try Again
+            </button>
+          </div>
+
+          <!-- Order Summary -->
+          <div
+            class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl"
+            style="
+              background: linear-gradient(
+                140.9deg,
+                #f2fffd 27.61%,
+                #f9fdff 72.42%
+              );
+            "
+          >
+            <div class="flex justify-between items-end">
+              <div>
+                <h3 class="md:text-5xl text-3xl font-semibold text-secondary">
+                  Order
+                </h3>
+              </div>
+              <p class="text-lg text-secondary mt-1">3 Items</p>
+            </div>
+            <hr class="my-8" />
+            <div class="mt-2 flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">Subtotal</span>
+              <span class="text-lg text-secondary">SG$146</span>
+            </div>
+            <div class="flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">GST</span>
+              <span class="text-lg text-secondary">SG$3.18</span>
+            </div>
+            <div class="flex justify-between text-sm text-secondary">
+              <span class="text-lg text-secondary">Discount</span>
+              <span class="text-lg text-secondary">- SG$0</span>
+            </div>
+            <div
+              class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            >
+              <span class="text-xl">Total</span>
+              <span class="md:text-3xl text-xl">SG$149.18</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <!-- Footer -->
-    <footer class="bg-white shadow-xl mt-auto">
+    <footer class="mt-auto shadow-xl bg-theme mt-auto bottom-0">
       <div class="container mx-auto px-4 py-8">
         <div class="grid grid-cols-1 md:grid-cols-12">
           <!-- Contact Section -->
