--- a/src/payment.html
+++ b/src/payment.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Checkout Page</title>
-    <link rel="stylesheet" href="../build/tailwind.css" />
+    <link rel="stylesheet" href="./tailwind.css" />
   </head>
-  <body class="p-6">
+  <body class="flex flex-col h-full m-0">
     <!-- ========== Header CONTENT ========== -->
     <nav class="bg-[transparent] dark:bg-black dark:text-secondary">
       <div
@@ -147,50 +147,41 @@
       </div>
     </nav>
 
-    <div class="w-lg mx-auto bg-white p-6">
-      <h2 class="text-3xl font-bold mb-6">Checkout</h2>
-      <div class="grid md:grid-cols-2 grid-cols-1">
+    <div class="w-lg mx-auto bg-white p-6 flex-1 container">
+      <h2 class="text-3xl md:text-5xl text-secondary font-bold mb-6">
+        Checkout
+      </h2>
+      <div class="grid md:grid-cols-2 grid-cols-1 gap-6">
         <!-- Payment Method Section -->
-        <div class="pr-6">
-          <h3 class="text-xl font-semibold mb-4">Payment Method</h3>
+        <div class="">
+          <h3 class="text-xl md:text-2xl text-secondary font-semibold mb-4">
+            Payment Method
+          </h3>
           <form>
-            <div class="flex gap-2 items-center">
-              <div class="mb-4">
-                <input
-                  type="radio"
-                  id="visa"
-                  name="payment"
-                  class="mr-2"
-                  checked
-                />
+            <div class="flex gap-6 items-center my-8 flex-wrap">
+              <div class="flex items-center gap-4">
+                <input type="radio" id="visa" name="payment" class="" checked />
                 <label for="visa" class="inline-flex items-center">
-                  <img
-                    src="https://img.icons8.com/color/48/000000/visa.png"
-                    alt="Visa"
-                    class="w-8 h-8 mr-2"
-                  />
-                  VISA
+                  <img src="./assets/visa_master.svg" alt="Visa" class="" />
                 </label>
               </div>
-              <div class="mb-4">
-                <input type="radio" id="paynow" name="payment" class="mr-2" />
+              <div class="flex items-center gap-4">
+                <input type="radio" id="paynow" name="payment" class="" />
                 <label for="paynow" class="inline-flex items-center">
-                  <img
-                    src="https://img.icons8.com/color/48/000000/pay-now.png"
-                    alt="PayNow"
-                    class="w-8 h-8 mr-2"
-                  />
-                  PAYNOW
+                  <img src="./assets/paynow.svg" alt="PayNow" class=" " />
                 </label>
               </div>
-              <div class="mb-4">
+              <div class="flex items-center gap-4">
                 <input
                   type="radio"
                   id="bank_transfer"
                   name="payment"
-                  class="mr-2"
+                  class=""
                 />
-                <label for="bank_transfer" class="inline-flex items-center">
+                <label
+                  for="bank_transfer"
+                  class="inline-flex items-center text-secondary"
+                >
                   Bank Transfer
                 </label>
               </div>
@@ -204,46 +195,53 @@
           </form>
         </div>
         <!-- Order Summary Section -->
-        <div
-          class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl"
-          style="
-            background: linear-gradient(
-              140.9deg,
-              #f2fffd 27.61%,
-              #f9fdff 72.42%
-            );
-          "
-        >
-          <div class="flex justify-between items-end">
-            <div>
-              <h3 class="text-5xl font-semibold text-secondary">Order</h3>
-            </div>
-            <p class="text-lg text-secondary mt-1">3 Items</p>
-          </div>
-          <hr class="my-8" />
-          <div class="mt-2 flex justify-between text-sm text-secondary">
-            <span class="text-lg">Subtotal</span>
-            <span class="text-lg">SG$146</span>
-          </div>
-          <div class="flex justify-between text-sm text-secondary">
-            <span class="text-lg">GST</span>
-            <span class="text-lg">SG$3.18</span>
-          </div>
-          <div class="flex justify-between text-sm text-secondary">
-            <span class="text-lg">Discount</span>
-            <span class="text-lg">- SG$0</span>
-          </div>
+        <div class="md:flex md:items-center md:justify-center">
           <div
-            class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            class="p-10 shadow-md rounded-lg border-2 rounded-br-3xl md:w-3/4 w-auto "
+            style="
+              background: linear-gradient(
+                140.9deg,
+                #f2fffd 27.61%,
+                #f9fdff 72.42%
+              );
+            "
           >
-            <span class="text-xl">Total</span>
-            <span class="text-3xl">SG$149.18</span>
+            <div class="flex justify-between items-end">
+              <div>
+                <h3 class="md:text-5xl text-3xl font-semibold text-secondary">
+                  Order
+                </h3>
+              </div>
+              <p class="text-lg text-secondary mt-1">3 Items</p>
+            </div>
+            <hr class="my-8" />
+            <div class="pt-2 my-5">
+              <div class="flex justify-between mb-2">
+                <span class="text-secondary text-lg">Subtotal</span>
+                <span class="text-secondary text-lg">SG$146</span>
+              </div>
+              <div class="flex justify-between mb-2">
+                <span class="text-secondary text-lg">GST</span>
+                <span class="text-secondary text-lg">SG$3.18</span>
+              </div>
+
+              <div class="flex justify-between mb-2">
+                <span class="text-secondary text-lg">Discount</span>
+                <span class="text-secondary">– SG$0</span>
+              </div>
+            </div>
+            <div
+              class="mt-4 flex justify-between text-lg font-semibold text-secondary"
+            >
+              <span class="text-xl">Total</span>
+              <span class="md:text-3xl text-xl text-secondary">SG$149.18</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
     <!-- Footer -->
-    <footer class="bg-white shadow-xl mt-auto">
+    <footer class="mt-auto shadow-xl  bg-theme mt-auto bottom-0">
       <div class="container mx-auto px-4 py-8">
         <div class="grid grid-cols-1 md:grid-cols-12">
           <!-- Contact Section -->
